--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "botman/botman": "~2.0",
         "botman/driver-web": "~1.0",
         "botman/studio-addons": "~1.3",
         "botman/tinker": "~1.0",
         "fideloper/proxy": "^4.0",
+        "genkovich/dialog-flow-bot-man-middleware": "^0.0.6",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
-      "ext-json": "*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -71,7 +72,11 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true,
+            "thecodingmachine/discovery": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
